testing/stage_15/valid/long_function.c
long l(long a,int b)
{
	return a+b;
}

int main()
{
	return l(6,12);
}