testing/stage_15/invalid/long_missing_name.c
int main()
{
	long =4;
	return a;
}